--- a/pse-dbmodell/src/main/webapp/index.xhtml
+++ b/pse-dbmodell/src/main/webapp/index.xhtml
@@ -11,7 +11,7 @@
             rendered="#{not empty feedContents}"
             styleClass="simpletablestyle">
             <h:column>
-                <f:facet name="header">Text</f:facet>
+                <f:facet name="header">All Messages</f:facet>
                 #{feedContent.text}
             </h:column>
         </h:dataTable>
