--- a/pse-dbmodell/src/main/webapp/index.xhtml
+++ b/pse-dbmodell/src/main/webapp/index.xhtml
@@ -7,12 +7,20 @@
 	<ui:define name="content">
 		<h1>Welcome to PSE!</h1>
 		
-		<h:dataTable var="feedContent" value="#{feedContents}"
-            rendered="#{not empty feedContents}"
+		<h:dataTable var="message" value="#{messages}"
+            rendered="#{not empty messages}"
             styleClass="simpletablestyle">
             <h:column>
-                <f:facet name="header">All Messages</f:facet>
-                #{feedContent.text}
+                <f:facet name="header">Headline</f:facet>
+                #{message.headline}
+            </h:column>
+            <h:column>
+                <f:facet name="header">Message</f:facet>
+                #{message.message}
+            </h:column>
+            <h:column>
+                <f:facet name="header">createdOn</f:facet>
+                #{message.createdOn}
             </h:column>
         </h:dataTable>
 		
