Login label values changed and user haringst13 added
index.xhtml: Changed label values
user.sql: New user haringst13

--- a/pse-dbmodell/src/main/webapp/index.xhtml
+++ b/pse-dbmodell/src/main/webapp/index.xhtml
@@ -37,11 +37,11 @@
 
 					<h:outputLabel for="username" value="Username:" />
 					<p:inputText id="username" value="#{loginController.username}"
-						required="true" label="username" />
+						required="true" label="Username" />
 
 					<h:outputLabel for="password" value="Passwort:" />
 					<p:password id="password" value="#{loginController.password}"
-						required="true" label="username" />
+						required="true" label="Passwort" />
 
 					<f:facet name="footer">
 						<p:commandButton value="Anmelden" update="growl"
