Updated LoginController to use UserService to perform login. Added user zametter13.

--- a/pse-dbmodell/src/main/webapp/index.xhtml
+++ b/pse-dbmodell/src/main/webapp/index.xhtml
@@ -24,8 +24,8 @@
 		</h:dataTable>
 		<h:form>
 			<div id="#loginLink">
-				Um mit der Arbeit zu beginnen, müssen sie sich <em><span
-					onclick="PF('dlg').show()">einloggen!</span></em>
+				Um mit der Arbeit zu beginnen, müssen sie sich <em><a href="javascript:void(0)"
+					onclick="PF('dlg').show()">einloggen!</a></em>
 			</div>
 
 			<div>Weiter gehts <a href="TestLoggedIn.jsf">hier</a></div>
