--- a/pse-dbmodell/src/main/webapp/TestLoggedIn.xhtml
+++ b/pse-dbmodell/src/main/webapp/TestLoggedIn.xhtml
@@ -8,7 +8,7 @@
 	<ui:define name="content">
 	
 	<h:form>
-		<h:outputLabel for="username" value="Username: #{testLoggedInController.username}" />
+		<h:outputLabel value="Username: #{testLoggedInController.username}" />
 	</h:form>
 	
 	
