authentication for pages

--- a/pse-dbmodell/src/main/webapp/index.xhtml
+++ b/pse-dbmodell/src/main/webapp/index.xhtml
@@ -28,7 +28,7 @@
 					onclick="PF('dlg').show()">einloggen!</a></em>
 			</div>
 
-			<div>Weiter gehts <a href="TestLoggedIn.jsf">hier</a></div>
+			<div>Weiter gehts <a href="/protected/TestLoggedIn.jsf">hier</a></div>
 
 			<p:growl id="growl" sticky="true" showDetail="true" life="3000" />
 
