--- a/pse-dbmodell/src/main/webapp/protected/TestLoggedIn.xhtml
+++ b/pse-dbmodell/src/main/webapp/protected/TestLoggedIn.xhtml
@@ -54,6 +54,10 @@
 	        </p:panelGrid>
 		</p:dialog>
 
+		<div>
+			<h:commandButton action="#{loginController.logout()}" value="Abmelden" />			
+		</div>
+
 	</h:form>
 	
 	
