added userlist to test page (simple, but working) - images need to be fixes

--- a/pse-dbmodell/src/main/webapp/protected/TestLoggedIn.xhtml
+++ b/pse-dbmodell/src/main/webapp/protected/TestLoggedIn.xhtml
@@ -55,6 +55,9 @@
 		</p:dialog>
 
 		<div>
+			<a href="/protected/UserList.jsf">Liste aller Benutzer</a>
+		</div>
+		<div>
 			<h:commandButton action="#{loginController.logout()}" value="Abmelden" />			
 		</div>
 
