--- a/pse-dbmodell/src/main/webapp/index.html
+++ b/pse-dbmodell/src/main/webapp/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
 <meta http-equiv="Refresh" content="0; URL=index.jsf">
+<meta http-equiv="Refresh" content="0; URL=index.jsf">
 </head>
 </html>
