fixed image display

--- a/pse-dbmodell/src/main/webapp/protected/UserList.xhtml
+++ b/pse-dbmodell/src/main/webapp/protected/UserList.xhtml
@@ -18,7 +18,7 @@
 
 				<h:panelGrid columns="2" style="width:100%"
 					columnClasses="logo,detail">
-					<p:graphicImage name="#{user.imageRef}" />
+					<p:graphicImage value="#{user.imageRef}" />
 
 					<p:outputPanel>
 						<h:panelGrid columns="2" cellpadding="5">
