--- a/pse-dbmodell/src/main/webapp/protected/UserList.xhtml
+++ b/pse-dbmodell/src/main/webapp/protected/UserList.xhtml
@@ -26,6 +26,7 @@
 							<h:outputLink  value="/protected/User.jsf">
 								<h:outputText value="#{user.fullname}"  style="font-weight: bold"/>
 								<f:param name="userName" value="#{user.userName}" />
+								<f:param name="mode" value="view" />
 							</h:outputLink>
 
 							<h:outputText value="Abteilung:" />
