--- a/pse-dbmodell/src/main/webapp/protected/TestLoggedIn.xhtml
+++ b/pse-dbmodell/src/main/webapp/protected/TestLoggedIn.xhtml
@@ -12,6 +12,7 @@
 		<h:outputLink  value="/protected/User.jsf">
 			<h:outputText value="Benutzerprofil"/>
 			<f:param name="userName" value="#{loginController.loggedInUsername}" />
+			<f:param name="mode" value="view" />
 		</h:outputLink>
 		<div>
 			<a href="/protected/UserList.jsf">Liste aller Benutzer</a>
