--- a/pse-dbmodell/src/main/webapp/protected/TestLoggedIn.xhtml
+++ b/pse-dbmodell/src/main/webapp/protected/TestLoggedIn.xhtml
@@ -9,12 +9,12 @@
 	
 	<h:form>
 		<h:outputLabel value="Username: #{testLoggedInController.username}" />
-		<h:outputLink  value="/protected/User.jsf">
+		<h:outputLink  value="#{request.contextPath}/protected/User.jsf">
 			<h:outputText value="Benutzerprofil"/>
 			<f:param name="userName" value="#{loginController.loggedInUsername}" />
 		</h:outputLink>
 		<div>
-			<a href="/protected/UserList.jsf">Liste aller Benutzer</a>
+			<a href="#{request.contextPath}/protected/UserList.jsf">Liste aller Benutzer</a>
 		</div>
 		<div>
 			<h:commandButton action="#{loginController.logout()}" value="Abmelden" />			
