demo version of message entry/ list view

--- a/pse-dbmodell/src/main/webapp/protected/TestLoggedIn.xhtml
+++ b/pse-dbmodell/src/main/webapp/protected/TestLoggedIn.xhtml
@@ -18,6 +18,12 @@
 			<a href="#{request.contextPath}/protected/UserList.jsf">Liste aller Benutzer</a>
 		</div>
 		<div>
+			<a href="#{request.contextPath}/protected/xperimental/AddMessage.jsf">Demonachricht eingeben</a>
+		</div>
+		<div>
+			<a href="#{request.contextPath}/protected/xperimental/ListMessages.jsf">Demonachrichten ansehen</a>
+		</div>
+		<div>
 			<h:commandButton action="#{loginController.logout()}" value="Abmelden" />			
 		</div>
 
