--- a/pse-dbmodell/src/main/webapp/NotLoggedIn.xhtml
+++ b/pse-dbmodell/src/main/webapp/NotLoggedIn.xhtml
@@ -8,7 +8,7 @@
 	<ui:define name="content">
 	
 	<h1>Thou shalt not pass!</h1>
-	<div>Speak, friend and you may enter at <a href="#{request.contextPath}/index.jsf">this</a> door.</div>
+	<div>Speak friend, and you may enter at the <a href="#{request.contextPath}/index.jsf">Doors fo Durin</a> door.</div>
 	
 	</ui:define>
 </ui:composition>	
