small improvements, user private communities (@<username>) created and can be selected

--- a/pse-dbmodell/src/main/webapp/protected/chat/MessageEditorTag.xhtml
+++ b/pse-dbmodell/src/main/webapp/protected/chat/MessageEditorTag.xhtml
@@ -69,8 +69,12 @@
 						itemLabel="#{communityDTO.name}"
 						itemValue="#{communityDTO}"
 						forceSelection="true"
-						minQueryLength="3">
-						
+						minQueryLength="3"
+						required="true"						
+						>
+						<p:ajax event="itemSelect" listener="#{messageEditorController.handleSelect}" />
+						<p:ajax event="itemUnselect" listener="#{messageEditorController.handleUnselect}" />
+
 						<f:facet name="itemTip">#{communityDTO.name}</f:facet>
 
 					</p:autoComplete>
