--- a/pse-dbmodell/src/main/webapp/protected/chat/MessageEditorTag.xhtml
+++ b/pse-dbmodell/src/main/webapp/protected/chat/MessageEditorTag.xhtml
@@ -81,6 +81,23 @@
 				</p:column>
 			</p:row>
 			<p:row>
+				<p:column>
+					<p:outputLabel for="messageTags" value="Schlagwörter" />
+				</p:column>
+				<p:column>
+					<p:autoComplete id="messageTags" multiple="true"
+						value="#{messageEditorController.selectedTags}"
+						completeMethod="#{messageEditorController.completeTag}"
+						forceSelection="true"
+						minQueryLength="3"
+						>
+						<p:ajax event="itemSelect" listener="#{messageEditorController.handleTagSelect}" />
+						<p:ajax event="itemUnselect" listener="#{messageEditorController.handleTagUnselect}" />
+
+					</p:autoComplete>
+				</p:column>
+			</p:row>
+			<p:row>
 				<p:column rowspan="2">
 					<p:commandButton value="Speichern" icon="ui-icon-disk"
 						validateClient="true" ajax="false"
