/ in file path is needed after all...

--- a/pse-dbmodell/src/main/webapp/protected/chat/MessageEditorTag.xhtml
+++ b/pse-dbmodell/src/main/webapp/protected/chat/MessageEditorTag.xhtml
@@ -12,7 +12,7 @@
 		<p:panelGrid>
 
 			<p:row>
-				<p:column colspan="2">Neue Nachricht eingeben</p:column>
+				<p:column colspan="2">Neue Nachricht eingeben: #{request.contextPath}</p:column>
 			</p:row>
 			<p:row>
 				<p:column></p:column>
