--- a/pse-dbmodell/src/main/webapp/protected/Menu.xhtml
+++ b/pse-dbmodell/src/main/webapp/protected/Menu.xhtml
@@ -12,8 +12,8 @@
 					<p:button value="Home" icon="ui-icon-home" href="/protected/TestLoggedIn.jsf"/>
 	            	<p:button value="Communities" icon="ui-icon-pencil" href="/protected/Communities.jsf"/>
 	            	<p:button value="Personen" href="/protected/UserList.jsf"/>
-	            	<p:button value="Services" icon="ui-icon-help" url="/protected/Services.jsf" />
-	            	<p:button value="Administration" icon="ui-icon-gear" url="/protected/AdminView.jsf" />
+	            	<p:button value="Services" icon="ui-icon-help" href="/protected/Services.jsf" />
+	            	<p:button value="Administration" icon="ui-icon-gear" href="/protected/AdminView.jsf" />
 	            	<span class="ui-separator">
 	                	<span class="ui-icon ui-icon-grip-dotted-vertical" />
 	            	</span>
