Fixed bugs introduced by myself

--- a/pse-dbmodell/src/main/webapp/protected/User.xhtml
+++ b/pse-dbmodell/src/main/webapp/protected/User.xhtml
@@ -43,7 +43,7 @@
 					disabled="True" />
 			</h:panelGrid>
 
-			<!-- p:dataScroller value="#{userProfileController.userDTO.contacts}" var="contact"
+			<p:dataScroller value="#{userProfileController.userDTO.contacts}" var="contact"
 				chunkSize="10" mode="inline" scrollHeight="500">
 				<f:facet name="header">
             Liste der Kontakte
@@ -65,7 +65,7 @@
 						</h:panelGrid>
 					</p:outputPanel>
 				</h:panelGrid>
-			</p:dataScroller-->
+			</p:dataScroller>
 
 
 
