--- a/pse-dbmodell/src/main/webapp/protected/User.xhtml
+++ b/pse-dbmodell/src/main/webapp/protected/User.xhtml
@@ -7,7 +7,7 @@
 	template="/WEB-INF/templates/default.xhtml">
 	<ui:define name="content">
 		<h:form>
-			<img src="#{request.contextPath}#{userProfileController.userDTO.imageRef}" alt="Kein Foto vorhanden! " />
+			<img class="user" src="#{request.contextPath}#{userProfileController.userDTO.imageRef}" alt="Kein Foto vorhanden! " />
 
 			<p:fileUpload
 				fileUploadListener="#{userProfileController.handleFileUpload}"
