--- a/pse-dbmodell/src/main/webapp/protected/User.xhtml
+++ b/pse-dbmodell/src/main/webapp/protected/User.xhtml
@@ -11,10 +11,12 @@
 				src="#{request.contextPath}#{userProfileController.userDTO.imageRef}"
 				alt="Kein Foto vorhanden! " />
 
-			<p:fileUpload
-				fileUploadListener="#{userProfileController.handleFileUpload}"
-				dragDropSupport="true" update="messages" sizeLimit="10000000"
-				allowTypes="/(\.|\/)(docx|xlsx|pdf|jpe?g|png)$/" mode="advanced" />
+			<h:panelGroup id="fileUploadGroup" style="#{userProfileController.fileuploadDisplay}" >
+				<p:fileUpload 
+				    fileUploadListener="#{userProfileController.handleFileUpload}"
+					dragDropSupport="true" update="messages fileUploadGroup" sizeLimit="10000000"
+					allowTypes="/(\.|\/)(docx|xlsx|pdf|jpe?g|png)$/" mode="advanced" />
+			</h:panelGroup>
 			<p:growl id="messages" showDetail="true" />
 
 			<h:panelGrid columns="2" cellpadding="5">
