--- a/pse-dbmodell/src/main/webapp/protected/TestLoggedIn.xhtml
+++ b/pse-dbmodell/src/main/webapp/protected/TestLoggedIn.xhtml
@@ -8,25 +8,37 @@
 	<ui:define name="content">
 	
 	<h:form>
-		<h:outputLabel value="Username: #{testLoggedInController.username}" />
-		<h:outputLink  value="#{request.contextPath}/protected/User.jsf">
-			<h:outputText value="Benutzerprofil"/>
-			<f:param name="userName" value="#{loginController.loggedInUsername}" />
-			<f:param name="mode" value="view" />
-		</h:outputLink>
-		<div>
-			<a href="#{request.contextPath}/protected/UserList.jsf">Liste aller Benutzer</a>
-		</div>
 		<div>
 			<a href="#{request.contextPath}/protected/xperimental/AddMessage.jsf">Demonachricht eingeben</a>
 		</div>
 		<div>
 			<a href="#{request.contextPath}/protected/xperimental/ListMessages.jsf">Demonachrichten ansehen</a>
 		</div>
-		<div>
-			<h:commandButton action="#{loginController.logout()}" value="Abmelden" />			
-		</div>
 
+		<p:dataScroller value="#{simpleFeedController.activities}" var="activity"
+				chunkSize="10" mode="inline" scrollHeight="500">
+				<f:facet name="header">
+		            Activities
+		        </f:facet>
+		        
+				<h:panelGrid columns="1" style="width:100%"
+					columnClasses="logo,detail">
+					<p:outputPanel>
+						<h:panelGrid columns="4" cellpadding="5">
+							<h:outputText value="Autor:" />
+							<h:outputText value="#{activity.person.firstName} #{activity.person.lastName}" style="font-weight: bold" />
+
+							<h:outputText value="Datum:" />
+							<h:outputText value="#{activity.createdAt}" style="font-weight: bold" >
+								<f:convertDateTime pattern="dd.MM.yyyy HH:mm" />
+							</h:outputText>
+						</h:panelGrid>	
+
+						<h:outputText value="#{activity.message}" />
+						
+					</p:outputPanel>
+				</h:panelGrid>
+			</p:dataScroller>
 	</h:form>
 	
 	
