Fixed actionListener in MessageEditorTag. Added constructor to create CommunityDTO from Community.

--- a/pse-dbmodell/src/main/webapp/protected/chat/MessageEditorTag.xhtml
+++ b/pse-dbmodell/src/main/webapp/protected/chat/MessageEditorTag.xhtml
@@ -101,7 +101,7 @@
 				<p:column rowspan="2">
 					<p:commandButton value="Speichern" icon="ui-icon-disk"
 						validateClient="true" ajax="false"
-						actionListener="messageEditorController.save()" />
+						actionListener="#{messageEditorController.save}" />
 				</p:column>
 			</p:row>
 		</p:panelGrid>
