--- a/pse-dbmodell/src/main/webapp/protected/User.xhtml
+++ b/pse-dbmodell/src/main/webapp/protected/User.xhtml
@@ -7,14 +7,12 @@
 	template="/WEB-INF/templates/default.xhtml">
 	<ui:define name="content">
 		<h:form>
-			<img class="user"
-				src="#{request.contextPath}#{userProfileController.userDTO.imageRef}"
-				alt="Kein Foto vorhanden! " />
+			<p:graphicImage id="userimage" styleClass="userimage" value="#{userProfileController.userDTO.imageRef}" cache="false" />		
 
 			<h:panelGroup id="fileUploadGroup" style="#{userProfileController.fileuploadDisplay}" >
 				<p:fileUpload 
 				    fileUploadListener="#{userProfileController.handleFileUpload}"
-					dragDropSupport="true" update="messages fileUploadGroup" sizeLimit="10000000"
+					dragDropSupport="true" update="messages,userimage" sizeLimit="10000000"
 					allowTypes="/(\.|\/)(docx|xlsx|pdf|jpe?g|png)$/" mode="advanced" />
 			</h:panelGroup>
 			<p:growl id="messages" showDetail="true" />
