Renamed TestLoggedIn.jsf to Main.jsf and change references to it

--- a/pse-dbmodell/src/main/webapp/index.xhtml
+++ b/pse-dbmodell/src/main/webapp/index.xhtml
@@ -28,7 +28,7 @@
 					onclick="PF('dlg').show()">einloggen!</a></em>
 			</h:panelGroup>
 			<h:panelGroup rendered="#{loginController.isLoggedIn}">
-				<div>Du bist bereits eingeloggt. Weiter gehts <a href="#{request.contextPath}/protected/TestLoggedIn.jsf">hier</a></div>
+				<div>Du bist bereits eingeloggt. Weiter gehts <a href="#{request.contextPath}/protected/Main.jsf">hier</a></div>
 			</h:panelGroup>
 			<p:growl id="growl" sticky="false" showDetail="true" life="5000" />
 
