--- a/pse-dbmodell/src/main/webapp/protected/Menu.xhtml
+++ b/pse-dbmodell/src/main/webapp/protected/Menu.xhtml
@@ -9,7 +9,7 @@
 		<p:toolbar rendered="#{loginController.isLoggedIn}">
 			<f:facet name="left">
 				<h:form>
-					<p:button value="Home" icon="ui-icon-home" href="/protected/TestLoggedIn.jsf"/>
+					<p:button value="Home" icon="ui-icon-home" href="/protected/Main.jsf"/>
 	            	<p:button value="Communities" icon="ui-icon-pencil" href="/protected/Communities.jsf"/>
 	            	<p:button value="Mitarbeiter" href="/protected/UserList.jsf"/>
 	            	<p:button value="Services" icon="ui-icon-help" href="/protected/Services.jsf" />
